--- a/lib/pref/Makefile
+++ b/lib/pref/Makefile
@@ -5,7 +5,7 @@ CONFIG = \
        font-gcu.prf font-sdl.prf font-win.prf font-x11.prf font.prf \
        flvr-dvg.prf flvr-new.prf flvr-nmd.prf flvr-shb.prf flvr-xxx.prf \
        xtra-dvg.prf xtra-new.prf xtra-nmd.prf xtra-shb.prf xtra-xxx.prf \
-       graf-dvg.prf graf-new.prf graf-nmd.prf graf-shb.prf graf-xxx.prf graf.prf \
+       graf-dvg.prf graf-new.prf graf-nmd.prf graf-shb.prf graf-xxx.prf \
        keys-gcu.prf \
        message.prf pref.prf user.prf
 
