--- a/lib/help/Makefile
+++ b/lib/help/Makefile
@@ -1,7 +1,7 @@
 MKPATH=../../mk/
 include $(MKPATH)buildsys.mk
 
-DATA = readme.txt attack.txt birth.txt command.txt debug.txt dungeon.txt \
+DATA = attack.txt birth.txt command.txt debug.txt dungeon.txt \
   general.txt help.hlp option.txt playing.txt version.txt
 PACKAGE = help
 
