Remove all test programs on clean (not just current ones)

--- a/src/tests/Makefile
+++ b/src/tests/Makefile
@@ -29,7 +29,7 @@ bin/% : %.o ../angband.o unit-test.o
 	@echo "  CC $@"
 
 clean :
-	$(RM) $(TESTPROGS) $(TESTOBJS)
+	$(RM) bin/* $(TESTOBJS)
 
 .PHONY : all clean
 .PRECIOUS : %.o
